applicationsets/git-dir-generator/apps/pricelist-frontend/pricelist-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: pricelist
    tier: frontend
  name: pricelist-route1
  namespace: pricelist1
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: Service
    name: pricelist1
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
